socials and clients

--- a/index.html
+++ b/index.html
@@ -38,12 +38,20 @@
 
         <ul class="auth-nav list">
           <li class="auth-nav-item">
-            <a href="meilto:info@devstudio.com" class="link"
-              >info@devstudio.com</a
+            <a href="meilto:info@devstudio.com" class="link">
+              <svg class="auth-nav-icon" width="16" height="16">
+                <use href="./images/sprite.svg#envelope"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li class="auth-nav-item">
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="link">
+              <svg class="auth-nav-icon" width="16" height="16">
+                <use href="./images/sprite.svg#smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -64,6 +72,11 @@
           <h2 class="visually-hidden">Особливості</h2>
           <ul class="features-list list">
             <li>
+              <div class="thumb">
+                <svg class="features-icon" width="70" height="70">
+                  <use href="./images/sprite.svg#antenna"></use>
+                </svg>
+              </div>
               <h3 class="features-title">Увага до деталей</h3>
               <p class="features-text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
@@ -71,6 +84,11 @@
               </p>
             </li>
             <li>
+              <div class="thumb">
+                <svg class="features-icon" width="70" height="70">
+                  <use href="./images/sprite.svg#clock"></use>
+                </svg>
+              </div>
               <h3 class="features-title">Пунктуальність</h3>
               <p class="features-text">
                 Завдання організації, особливо рамки і місце навчання кадрів
@@ -78,12 +96,22 @@
               </p>
             </li>
             <li>
+              <div class="thumb">
+                <svg class="features-icon" width="70" height="70">
+                  <use href="./images/sprite.svg#diagram"></use>
+                </svg>
+              </div>
               <h3 class="features-title">Планування</h3>
               <p class="features-text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li>
+              <div class="thumb">
+                <svg class="features-icon" width="70" height="70">
+                  <use href="./images/sprite.svg#astronaut"></use>
+                </svg>
+              </div>
               <h3 class="features-title">Сучасні технології</h3>
               <p class="features-text">
                 Значимість цих проблем настільки очевидна, що реалізація
@@ -127,7 +155,7 @@
         </div>
       </section>
 
-      <!-- --------------------------------------------------------------- -->
+      <!-- ----------------------------------------------------->
       <!-- Наша команда -->
       <section class="team">
         <div class="container">
@@ -143,6 +171,36 @@
               <div class="team-card-title">
                 <h3 class="team-name">Ігор Дем'яненко</h3>
                 <p class="team-text">Product Designer</p>
+                <ul class="list">
+                  <li>
+                    <a class="socials-link" href="#"
+                      ><svg class="socials-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="socials-link" href="#"
+                      ><svg class="socials-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="socials-link" href="#"
+                      ><svg class="socials-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="socials-link" href="#"
+                      ><svg class="socials-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-card">
@@ -155,6 +213,36 @@
               <div class="team-card-title">
                 <h3 class="team-name">Ольга Рєпіна</h3>
                 <p class="team-text">Frontend Developer</p>
+                <ul class="list">
+                  <li>
+                    <a class="socials-link" href="#"
+                      ><svg class="socials-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="socials-link" href="#"
+                      ><svg class="socials-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="socials-link" href="#"
+                      ><svg class="socials-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="socials-link" href="#"
+                      ><svg class="socials-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-card">
@@ -167,6 +255,36 @@
               <div class="team-card-title">
                 <h3 class="team-name">Микола Тарасов</h3>
                 <p class="team-text">Marketing</p>
+                <ul class="list">
+                  <li>
+                    <a class="socials-link" href="#"
+                      ><svg class="socials-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="socials-link" href="#"
+                      ><svg class="socials-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="socials-link" href="#"
+                      ><svg class="socials-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="socials-link" href="#"
+                      ><svg class="socials-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-card">
@@ -179,9 +297,94 @@
               <div class="team-card-title">
                 <h3 class="team-name">Михайло Єрмаков</h3>
                 <p class="team-text">UI Designer</p>
+                <ul class="list">
+                  <li>
+                    <a class="socials-link" href="#"
+                      ><svg class="socials-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="socials-link" href="#"
+                      ><svg class="socials-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="socials-link" href="#"
+                      ><svg class="socials-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="socials-link" href="#"
+                      ><svg class="socials-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
+        </div>
+      </section>
+
+      <!-- Постійні клієнти------------------------------------->
+      <section class="clients">
+        <div class="container">
+          <h2 class="clients-title">Постійні клієнти</h2>
+          <ul class="clients-list list">
+            <li>
+              <a href="#" class="link">
+              <div class="thumb">
+              <svg class="client-icon" width="41" height="46.7">
+                  <use href="./images/sprite.svg#client1"></use>
+                </svg>
+              </div>
+            </a>
+            </li>
+            <li><a href="#" class="link">
+              <div class="thumb">
+              <svg class="client-icon" width="40" height="52">
+                  <use href="./images/sprite.svg#client2"></use>
+                </svg>
+              </div>
+            </a></li>
+            <li><a href="#" class="link">
+              <div class="thumb">
+              <svg class="client-icon" width="43.46" height="41.18">
+                  <use href="./images/sprite.svg#client3"></use>
+                </svg>
+              </div>
+            </a></li>
+            <li><a href="#" class="link">
+              <div class="thumb">
+              <svg class="client-icon" width="84.44" height="40.62">
+                  <use href="./images/sprite.svg#client4"></use>
+                </svg>
+              </div>
+            </a></li>
+            <li><a href="#" class="link">
+              <div class="thumb">
+              <svg class="client-icon" width="62.54" height="45.43">
+                  <use href="./images/sprite.svg#client5"></use>
+                </svg>
+              </div>
+            </a></li>
+            <li><a href="#" class="link">
+              <div class="thumb">
+              <svg class="client-icon" width="93.79" height="43.93">
+                  <use href="./images/sprite.svg#client6"></use>
+                </svg>
+              </div>
+            </a>
+          </li>
+          </ul>
+          </div>
         </div>
       </section>
     </main>
