все зробив, залишилось перевірити по критеріям

--- a/index.html
+++ b/index.html
@@ -392,7 +392,8 @@
     <!-- Футер з адресою -->
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="logo"
+        <div>
+          <a href="./index.html" class="logo"
           >Web<span class="logo-white">Studio</span></a
         >
         <address>
@@ -417,6 +418,41 @@
             </li>
           </ul>
         </address>
+        </div>
+        
+        <div class="footer-socials">
+          <p>приєднуйтесь</p>
+          <ul class="list">
+            <li>
+              <a class="socials-link" href="#"
+                ><svg class="socials-icon" width="20" height="20">
+                  <use href="./images/sprite.svg#instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a class="socials-link" href="#"
+                ><svg class="socials-icon" width="20" height="20">
+                  <use href="./images/sprite.svg#twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a class="socials-link" href="#"
+                ><svg class="socials-icon" width="20" height="20">
+                  <use href="./images/sprite.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a class="socials-link" href="#"
+                ><svg class="socials-icon" width="20" height="20">
+                  <use href="./images/sprite.svg#linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
