знайшов помилку, форматнув

--- a/index.html
+++ b/index.html
@@ -340,51 +340,59 @@
           <ul class="clients-list list">
             <li>
               <a href="#" class="link">
-              <div class="thumb">
-              <svg class="client-icon" width="41" height="46.7">
-                  <use href="./images/sprite.svg#client1"></use>
-                </svg>
-              </div>
-            </a>
+                <div class="thumb">
+                  <svg class="client-icon" width="41" height="46.7">
+                    <use href="./images/sprite.svg#client1"></use>
+                  </svg>
+                </div>
+              </a>
             </li>
-            <li><a href="#" class="link">
-              <div class="thumb">
-              <svg class="client-icon" width="40" height="52">
-                  <use href="./images/sprite.svg#client2"></use>
-                </svg>
-              </div>
-            </a></li>
-            <li><a href="#" class="link">
-              <div class="thumb">
-              <svg class="client-icon" width="43.46" height="41.18">
-                  <use href="./images/sprite.svg#client3"></use>
-                </svg>
-              </div>
-            </a></li>
-            <li><a href="#" class="link">
-              <div class="thumb">
-              <svg class="client-icon" width="84.44" height="40.62">
-                  <use href="./images/sprite.svg#client4"></use>
-                </svg>
-              </div>
-            </a></li>
-            <li><a href="#" class="link">
-              <div class="thumb">
-              <svg class="client-icon" width="62.54" height="45.43">
-                  <use href="./images/sprite.svg#client5"></use>
-                </svg>
-              </div>
-            </a></li>
-            <li><a href="#" class="link">
-              <div class="thumb">
-              <svg class="client-icon" width="93.79" height="43.93">
-                  <use href="./images/sprite.svg#client6"></use>
-                </svg>
-              </div>
-            </a>
-          </li>
+            <li>
+              <a href="#" class="link">
+                <div class="thumb">
+                  <svg class="client-icon" width="40" height="52">
+                    <use href="./images/sprite.svg#client2"></use>
+                  </svg>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="link">
+                <div class="thumb">
+                  <svg class="client-icon" width="43.46" height="41.18">
+                    <use href="./images/sprite.svg#client3"></use>
+                  </svg>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="link">
+                <div class="thumb">
+                  <svg class="client-icon" width="84.44" height="40.62">
+                    <use href="./images/sprite.svg#client4"></use>
+                  </svg>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="link">
+                <div class="thumb">
+                  <svg class="client-icon" width="62.54" height="45.43">
+                    <use href="./images/sprite.svg#client5"></use>
+                  </svg>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="link">
+                <div class="thumb">
+                  <svg class="client-icon" width="93.79" height="43.93">
+                    <use href="./images/sprite.svg#client6"></use>
+                  </svg>
+                </div>
+              </a>
+            </li>
           </ul>
-          </div>
         </div>
       </section>
     </main>
@@ -394,32 +402,34 @@
       <div class="container">
         <div>
           <a href="./index.html" class="logo"
-          >Web<span class="logo-white">Studio</span></a
-        >
-        <address>
-          <ul class="list">
-            <li>
-              <a
-                href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-                class="adress-link"
-              >
-                м. Київ, пр-т Лесі Українки, 26</a
-              >
-            </li>
-            <li>
-              <a href="mailto:info@devstudio.com" class="mail-link"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li>
-              <a href="tel:+380961111111" class="tel-link">+38 096 111 11 11</a>
-            </li>
-          </ul>
-        </address>
+            >Web<span class="logo-white">Studio</span></a
+          >
+          <address>
+            <ul class="list">
+              <li>
+                <a
+                  href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  class="adress-link"
+                >
+                  м. Київ, пр-т Лесі Українки, 26</a
+                >
+              </li>
+              <li>
+                <a href="mailto:info@devstudio.com" class="mail-link"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a href="tel:+380961111111" class="tel-link"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
         </div>
-        
+
         <div class="footer-socials">
           <p>приєднуйтесь</p>
           <ul class="list">
