--- a/portfolio.html
+++ b/portfolio.html
@@ -27,10 +27,10 @@
           >
           <ul class="site-nav list">
             <li class="site-nav-item">
-              <a href="./index.html" class="link current">Студія</a>
+              <a href="./index.html" class="link">Студія</a>
             </li>
             <li class="site-nav-item">
-              <a href="./portfolio.html" class="link">Портфоліо</a>
+              <a href="./portfolio.html" class="link current">Портфоліо</a>
             </li>
             <li class="site-nav-item"><a href="#" class="link">Контакти</a></li>
           </ul>
