--- a/index.html
+++ b/index.html
@@ -339,57 +339,45 @@
           <h2 class="clients-title">Постійні клієнти</h2>
           <ul class="clients-list list">
             <li>
-              <a href="#" class="link">
-                <div class="thumb">
-                  <svg class="client-icon" width="41" height="46.7">
-                    <use href="./images/sprite.svg#client1"></use>
-                  </svg>
-                </div>
+              <a href="#" class="clients-link">
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./images/sprite.svg#client1"></use>
+                </svg>
               </a>
             </li>
             <li>
-              <a href="#" class="link">
-                <div class="thumb">
-                  <svg class="client-icon" width="40" height="52">
-                    <use href="./images/sprite.svg#client2"></use>
-                  </svg>
-                </div>
+              <a href="#" class="clients-link">
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./images/sprite.svg#client2"></use>
+                </svg>
               </a>
             </li>
             <li>
-              <a href="#" class="link">
-                <div class="thumb">
-                  <svg class="client-icon" width="43.46" height="41.18">
-                    <use href="./images/sprite.svg#client3"></use>
-                  </svg>
-                </div>
+              <a href="#" class="clients-link">
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./images/sprite.svg#client3"></use>
+                </svg>
               </a>
             </li>
             <li>
-              <a href="#" class="link">
-                <div class="thumb">
-                  <svg class="client-icon" width="84.44" height="40.62">
-                    <use href="./images/sprite.svg#client4"></use>
-                  </svg>
-                </div>
+              <a href="#" class="clients-link">
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./images/sprite.svg#client4"></use>
+                </svg>
               </a>
             </li>
             <li>
-              <a href="#" class="link">
-                <div class="thumb">
-                  <svg class="client-icon" width="62.54" height="45.43">
-                    <use href="./images/sprite.svg#client5"></use>
-                  </svg>
-                </div>
+              <a href="#" class="clients-link">
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./images/sprite.svg#client5"></use>
+                </svg>
               </a>
             </li>
             <li>
-              <a href="#" class="link">
-                <div class="thumb">
-                  <svg class="client-icon" width="93.79" height="43.93">
-                    <use href="./images/sprite.svg#client6"></use>
-                  </svg>
-                </div>
+              <a href="#" class="clients-link">
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./images/sprite.svg#client6"></use>
+                </svg>
               </a>
             </li>
           </ul>
