--- a/portfolio.html
+++ b/portfolio.html
@@ -82,7 +82,7 @@
           <!-- Роботи -->
           <ul class="page-works list">
             <li class="works-item">
-              <a href="#" class="link">
+              <a href="#" class="works-link">
                 <img
                   src="./images/project1.jpg"
                   alt="Технокряк"
@@ -97,7 +97,7 @@
               </a>
             </li>
             <li class="works-item">
-              <a href="#" class="link">
+              <a href="#" class="works-link">
                 <img
                   src="./images/project2.jpg"
                   alt="Постер New Orlean vs Golden Star"
@@ -112,7 +112,7 @@
               </a>
             </li>
             <li class="works-item">
-              <a href="#" class="link">
+              <a href="#" class="works-link">
                 <img
                   src="./images/project3.jpg"
                   alt="Ресторан Seafood"
@@ -127,7 +127,7 @@
               </a>
             </li>
             <li class="works-item">
-              <a href="#" class="link">
+              <a href="#" class="works-link">
                 <img
                   src="./images/project4.jpg"
                   alt="Проєкт Prime"
@@ -142,7 +142,7 @@
               </a>
             </li>
             <li class="works-item">
-              <a href="#" class="link">
+              <a href="#" class="works-link">
                 <img
                   src="./images/project5.jpg"
                   alt="Проєкт Boxes"
@@ -157,7 +157,7 @@
               </a>
             </li>
             <li class="works-item">
-              <a href="#" class="link">
+              <a href="#" class="works-link">
                 <img
                   src="./images/project6.jpg"
                   alt="Inspiration has no Borders"
@@ -172,7 +172,7 @@
               </a>
             </li>
             <li class="works-item">
-              <a href="#" class="link">
+              <a href="#" class="works-link">
                 <img
                   src="./images/project7.jpg"
                   alt="Видання Limited Edition"
@@ -187,7 +187,7 @@
               </a>
             </li>
             <li class="works-item">
-              <a href="#" class="link">
+              <a href="#" class="works-link">
                 <img
                   src="./images/project8.jpg"
                   alt="Проєкт LAB"
@@ -202,7 +202,7 @@
               </a>
             </li>
             <li class="works-item">
-              <a href="#" class="link">
+              <a href="#" class="works-link">
                 <img
                   src="./images/project9.jpg"
                   alt="Growing Business"
